# Machine-Vision-Algorithms-in-C-

./: README.md
Adaboost Classifier and Object tracking/: README
Adaboost Classifier and Object tracking/src/: AdaBoost.cc  AdaBoost.hh  Makefile  WeakClassifier.cc  WeakClassifier.hh  adaBoost  faceDetector  nr1.cc  nr2.cc  nr3.cc  plots.txt  sheet03.cpp  tracking
Classification and Regressian/: CMakeLists.txt  README
Classification and Regressian/data/: bottle_test.txt  bottle_train.txt  horse_test.txt  horse_train.txt  regression_test.txt  regression_train.txt
Classification and Regressian/src/: sheet01.cpp
Decision Tree and Decision Forest/: CMakeLists.txt  README  Sherwood_Library_Observations.txt
Decision Tree and Decision Forest/Segment_Output/: Comments_on_Testing.txt
Decision Tree and Decision Forest/Sherwood_Results_exp_n2/: exp5_2_Depth_4.dib  exp5_n2_Depth_10.dib  exp5_n2_Depth_2.dib  exp5_n2_Trees_5.dib  exp5_n2_Trees_9.dib  exp5_n2_candidate_feature_response9_.dib  exp5_n2_candidate_feature_response_5.dib  exp5_n2_candidate_threshhold_1.dib  exp_n2_candidate_feature_response_2.dib  exp_n2_candidate_feature_response_5.dib  exp_n2_candidate_threshold_7.dib
Decision Tree and Decision Forest/Sherwood_Results_exp_n4/: candidate_feature_response-10.dib  candidate_feature_response-1_.dib  candidate_feature_response-3.dib  candidate_feature_response-7.dib  candidate_feature_response-8.dib  candidate_threshhold_10_.dib  candidate_threshhold_7.dib  candidate_threshold_1.dib  depth_10.dib  depth_5.dib  depth_7.dib  trees-2.dib  trees-4.dib  trees-8.dib
Decision Tree and Decision Forest/src/: BinaryTest.h  Forest.cpp  Forest.h  Node.cpp  Node.h  Sample.h  Tree.cpp  Tree.h  sheet02.cpp  tree_utils.cpp  tree_utils.h
Decision Tree and Decision Forest/src/.svn/: all-wcprops  entries
Decision Tree and Decision Forest/src/.svn/text-base/: sheet02.cpp.svn-base
SVM and Pedestrian Detection/: CMakeLists.txt  GNU.txt  Plot.txt  README
SVM and Pedestrian Detection/Ex_4_GnuR_Scripts/: MissRateVsFPPW_Combined.r  PrecisionVsRecall_Combined.r
SVM and Pedestrian Detection/section_1_testImages/: createfiles.sh  filenames.txt
SVM and Pedestrian Detection/src/: HogDetector.cpp  HogDetector.h  sheet04.cpp
Sherwood/: MSR-LA - Sherwood Code Library.rtf  ReadMe.txt
Sherwood/csharp/: ReadMe.txt
Sherwood/csharp/demo/: ReadMe.txt  sherwood.sln
Sherwood/csharp/demo/Demo/: CommandLineParser.cs  Demo.csproj  Program.cs
Sherwood/csharp/lib/: Forest.cs  ForestTrainer.cs  Interfaces.cs  Node.cs  ParallelForestTrainer.cs  ProgressWriter.cs  ReadMe.txt  Sherwood.csproj  Tree.cs
Sherwood/csharp/lib/Properties/: AssemblyInfo.cs
(+13 files in other folders)
